[gd_scene load_steps=21 format=3 uid="uid://c7etxb61lgifj"]

[ext_resource type="Script" path="res://Enemies/crab.gd" id="1_8f8rp"]
[ext_resource type="Texture2D" uid="uid://rf1xnol6qqod" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-1.png" id="2_2bwbw"]
[ext_resource type="Texture2D" uid="uid://dovfkd5eas88o" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-2.png" id="3_06lln"]
[ext_resource type="Texture2D" uid="uid://dr5u2d1u5043r" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-3.png" id="4_in86b"]
[ext_resource type="Texture2D" uid="uid://3hxlwominekn" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-4.png" id="5_awppx"]
[ext_resource type="Texture2D" uid="uid://b7df86m2c4i3" path="res://Assets/Sprite Sheets/enemies/enemy-death/enemy-death-5.png" id="6_cn4u2"]
[ext_resource type="Texture2D" uid="uid://b1e4o7iofh072" path="res://Assets/Sprite Sheets/enemies/crab-idle/crab-idle-1.png" id="7_kfd6c"]
[ext_resource type="Texture2D" uid="uid://b75p82p4ch8yl" path="res://Assets/Sprite Sheets/enemies/crab-idle/crab-idle-2.png" id="8_soxnw"]
[ext_resource type="Texture2D" uid="uid://piaa0cuigt0x" path="res://Assets/Sprite Sheets/enemies/crab-idle/crab-idle-3.png" id="9_q2ic5"]
[ext_resource type="Texture2D" uid="uid://blo5ovn0a3tpe" path="res://Assets/Sprite Sheets/enemies/crab-idle/crab-idle-4.png" id="10_84duv"]
[ext_resource type="Texture2D" uid="uid://d0bitbn4g05sr" path="res://Assets/Sprite Sheets/enemies/crab-walk/crab-walk-1.png" id="11_ji5tu"]
[ext_resource type="Texture2D" uid="uid://cwkc3gp7cwnum" path="res://Assets/Sprite Sheets/enemies/crab-walk/crab-walk-2.png" id="12_gy5qv"]
[ext_resource type="Texture2D" uid="uid://bmaoy2i6qyfpk" path="res://Assets/Sprite Sheets/enemies/crab-walk/crab-walk-3.png" id="13_pk8i5"]
[ext_resource type="Texture2D" uid="uid://ck8qqxt8qe24r" path="res://Assets/Sprite Sheets/enemies/crab-walk/crab-walk-4.png" id="14_mjqrr"]
[ext_resource type="AudioStream" uid="uid://d20itt7nor6p5" path="res://Assets/Audio/Effects/Enemies/Enemy.wav" id="15_bhguu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_76lk6"]
radius = 8.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tl6ye"]
radius = 175.026

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oc5ls"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dug1g"]
size = Vector2(34, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_meok1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2bwbw")
}, {
"duration": 1.0,
"texture": ExtResource("3_06lln")
}, {
"duration": 1.0,
"texture": ExtResource("4_in86b")
}, {
"duration": 1.0,
"texture": ExtResource("5_awppx")
}, {
"duration": 1.0,
"texture": ExtResource("6_cn4u2")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_kfd6c")
}, {
"duration": 1.0,
"texture": ExtResource("8_soxnw")
}, {
"duration": 1.0,
"texture": ExtResource("9_q2ic5")
}, {
"duration": 1.0,
"texture": ExtResource("10_84duv")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ji5tu")
}, {
"duration": 1.0,
"texture": ExtResource("12_gy5qv")
}, {
"duration": 1.0,
"texture": ExtResource("13_pk8i5")
}, {
"duration": 1.0,
"texture": ExtResource("14_mjqrr")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[node name="Crab" type="CharacterBody2D"]
script = ExtResource("1_8f8rp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_76lk6")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_tl6ye")
metadata/_edit_lock_ = true

[node name="DamageHitbox" type="Area2D" parent="."]
visible = false

[node name="Hitbox" type="CollisionShape2D" parent="DamageHitbox"]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_oc5ls")

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="Attack" type="CollisionShape2D" parent="AttackHitbox"]
visible = false
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_dug1g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_meok1")
animation = &"Idle"
autoplay = "Idle"
metadata/_edit_lock_ = true

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_bhguu")
volume_db = -5.0
pitch_scale = 0.3
max_distance = 250.0
attenuation = 2.0

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="DamageHitbox" to="." method="_on_damage_hitbox_body_entered"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
